<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/backgroundID"
    android:background="@drawable/brick"
    android:fitsSystemWindows="true" >

    <Switch
        android:id="@+id/Start_sw"
        android:layout_width="148dp"
        android:layout_height="47dp"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/start"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/speed_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <Button
        android:id="@+id/recognize_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="recognize"
        android:text="@string/recognize"
        android:textColor="#FFF9F9"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedV_bt"
        app:layout_constraintVertical_bias="0.386" />

    <Button
        android:id="@+id/speedL_bt"
        android:layout_width="220dp"
        android:layout_height="82dp"
        android:text="@string/speed_limit"
        android:textColor="#F44336"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_txt"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/speed_txt"
        android:layout_width="220dp"
        android:layout_height="117dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/_0_km_h"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/speedV_bt"
        android:layout_width="220dp"
        android:layout_height="82dp"
        android:text="@string/speed_violations"
        android:textColor="#F44336"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedL_bt"
        app:layout_constraintVertical_bias="0.164" />

</androidx.constraintlayout.widget.ConstraintLayout>